--- a/.github/workflows/ie-bank-infra.yml
+++ b/.github/workflows/ie-bank-infra.yml
@@ -28,27 +28,66 @@ env:
 
 
 jobs:
-  build:
+  validate-dev:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v3
+
+    - uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    
+    - uses: azure/arm-deploy@v1
+      with: 
+        subscriptionId: ${{env.SUBSCRIPTION_ID_DEV}}
+        resourceGroupName: ${{ env.RESOURCE_GROUP_DEV}}
+        template: ./main.bicep
+        parameters: ./paramters/dev.parameters.json appServiceAPIEnvVarENV=${{vars.ENV}} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }}
+        deploymentMode: Validate
+
+  validate-uat:
+    runs-on: ubuntu-latest
+      
+    steps:
+    - uses: actions/checkout@v3
+
+    - uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+      
+    - uses: azure/arm-deploy@v1
+      with: 
+        subscriptionId: ${{env.SUBSCRIPTION_ID_DEV}}
+        resourceGroupName: ${{ env.RESOURCE_GROUP_DEV}}
+        template: ./main.bicep
+        parameters: ./paramters/uat.parameters.json appServiceAPIEnvVarENV=${{vars.ENV}} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }}
+        deploymentMode: Validate
+
+
+
+
+
+  lint-build: 
     runs-on: ubuntu-latest
     env:
       ENV: ghci
     
     steps:
     - uses: actions/checkout@v3
-      # checkout code
-    - uses: actions/checkout@v3
 
-      # Lint Bicep code 
+    - uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - name: Run Bicep linter
       run: az bicep build --file ./main.bicep --only-show-errors --output json
 
-      # unit tests for bicep files (you may need to define a script for this if it's custom testing)
     - name: Run Bicep unit tests
       run: |
         chmod +x ./test-bicep.sh  
         ./test-bicep.sh  
 
-      # checkov scans    
     - name: run checkov scan
       uses: bridgecrewio/checkov-action@master
       with:
@@ -56,7 +95,6 @@ jobs:
         file: 'main.bicep'
       continue-on-error: true
 
-      # upload bicep build artifact 
     - name: upload bicep build artifact
       uses: actions/upload-artifact@v4
       with:
@@ -69,7 +107,7 @@ jobs:
   deploy-dev:
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
-    needs: build
+    needs: lint-build
     environment: 'Development'
 
     steps:
@@ -96,7 +134,7 @@ jobs:
   deploy-uat:
     if: github.event.pull_request.base.ref == 'main' || github.event_name == 'workflow_dispatch'   
     runs-on: ubuntu-latest
-    needs: build
+    needs: lint-build
     environment: 'UAT'
     
     steps:
