--- a/.github/workflows/ie-bank-infra.yml
+++ b/.github/workflows/ie-bank-infra.yml
@@ -9,7 +9,7 @@ on:
         - 'scripts/**'
   pull_request:
     branches: 
-        - "main" 
+        - main
 
 env:
   RESOURCE_GROUP_DEV: BCSAI2024-DEVOPS-STUDENTS-B-DEV
@@ -17,9 +17,9 @@ env:
   RESOURCE_GROUP_PROD: BCSAI2024-DEVOPS-STUDENTS-B-PROD
   SUBSCRIPTION_ID_DEV: e0b9cada-61bc-4b5a-bd7a-52c606726b3b
   USER_ALIAS: apayne
-  KEY_VAULT_SECRET_NAME_ACR_USERNAME: ACR-Username
-  KEY_VAULT_SECRET_NAME_ACR_PASSWORD: ACR-Password
-  KEY_VAULT_NAME: apayne-kv-dev
+  # KEY_VAULT_SECRET_NAME_ACR_USERNAME: ACR-Username
+  # KEY_VAULT_SECRET_NAME_ACR_PASSWORD: ACR-Password
+  # KEY_VAULT_NAME: apayne-kv-dev
   DOCKER_REGISTRY_SERVER_URL: myregistry.azurecr.io
   # REGISTRY_USERNAME:
   # REGISTRY_PASSWORD:
@@ -30,7 +30,6 @@ env:
 jobs:
   validate-dev:
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v3
 
@@ -43,12 +42,12 @@ jobs:
         subscriptionId: ${{env.SUBSCRIPTION_ID_DEV}}
         resourceGroupName: ${{ env.RESOURCE_GROUP_DEV}}
         template: ./main.bicep
-        parameters: ./parameters/dev.parameters.json appServiceAPIEnvVarENV=${{vars.ENV}} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }}
+        parameters: ./parameters/dev.parameters.json appServiceAPIEnvVarENV=${{vars.ENV}} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }} slackUrl=${{ vars.slackUrl}}
         deploymentMode: Validate
+
 
   validate-uat:
-    runs-on: ubuntu-latest
-      
+    runs-on: ubuntu-latest 
     steps:
     - uses: actions/checkout@v3
 
@@ -61,9 +60,26 @@ jobs:
         subscriptionId: ${{env.SUBSCRIPTION_ID_DEV}}
         resourceGroupName: ${{ env.RESOURCE_GROUP_DEV}}
         template: ./main.bicep
-        parameters: ./parameters/uat.parameters.json appServiceAPIEnvVarENV=${{vars.ENV}} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }}
+        parameters: ./parameters/uat.parameters.json appServiceAPIEnvVarENV=${{vars.ENV}} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }} slackUrl=${{ vars.slackUrl}}
         deploymentMode: Validate
 
+
+  validate-prod:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+      
+    - uses: azure/arm-deploy@v1
+      with: 
+        subscriptionId: ${{env.SUBSCRIPTION_ID_DEV}}
+        resourceGroupName: ${{ env.RESOURCE_GROUP_DEV}}
+        template: ./main.bicep
+        parameters: ./parameters/prod.parameters.json appServiceAPIEnvVarENV=${{vars.ENV}} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }} slackUrl=${{ vars.slackUrl}}
+        deploymentMode: Validate
 
 
 
@@ -107,8 +123,9 @@ jobs:
   deploy-dev:
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
-    needs: lint-build
-    environment: 'Development'
+    needs: [lint-build, validate-dev]
+    environment: 
+      name: 'Development'
 
     steps:
       # Checkout code
@@ -125,17 +142,18 @@ jobs:
         subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
         resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
         template: ./main.bicep
-        parameters: ./parameters/dev.parameters.json appServiceAPIEnvVarENV=${{vars.ENV}} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }}
+        parameters: ./parameters/dev.parameters.json appServiceAPIEnvVarENV=${{vars.ENV}} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }} slackUrl=${{ vars.slackUrl}}
         deploymentName: ${{ env.USER_ALIAS }}-dev
         failOnStdErr: false
 
 
 
   deploy-uat:
-    if: github.event.pull_request.base.ref == 'main' || github.event_name == 'workflow_dispatch'   
+    if: github.event.pull_request.base.ref == 'main' || github.event_name == 'workflow_dispatch'  || github.event_name == 'push' && github.ref == 'refs/heads/main'  
     runs-on: ubuntu-latest
-    needs: lint-build
-    environment: 'UAT'
+    needs: [lint-build, validate-uat]
+    environment: 
+      name: 'UAT'
     
     steps:
     - uses: actions/checkout@v3
@@ -155,37 +173,39 @@ jobs:
         subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
         resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
         template: ./main.bicep
-        parameters: ./parameters/uat.parameters.json appServiceAPIEnvVarENV=${{ vars.ENV }} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }}
+        parameters: ./parameters/uat.parameters.json appServiceAPIEnvVarENV=${{ vars.ENV }} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }} slackUrl=${{ vars.slackUrl}}
         deploymentName: ${{ env.USER_ALIAS }}-uat
         failOnStdErr: false
 
 
 
-  # deploy-prod:
-  #   if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-  #   runs-on: ubuntu-latest
-  #   needs: deploy-uat
-  #   environment: 'Production'
+  deploy-prod:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    needs: [lint-build, deploy-uat, validate-prod]
+    environment: 
+      name: 'Production'
 
-  #   steps: 
-  #   - uses: actions/checkout@v3
-  #   - name: download bicep build artifact
-  #     uses: actions/download-artifact@v4
-  #     with: 
-  #       name: bicep-build
+    steps: 
+    - uses: actions/checkout@v3
+    - name: download bicep build artifact
+      uses: actions/download-artifact@v4
+      with: 
+        name: bicep-build
 
-  #   # - uses: azure/login@v2
-  #   #   with: 
-  #   #     creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - uses: azure/login@v2
+      with: 
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-  #   - name: deploy to prod
-  #     uses: azure/arm-deploy@v2
-  #     with:
-  #       subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
-  #       resourceGroupName: ${{ env.RESOURCE_GROUP_PROD }}
-  #       template: ./main.bicep
-  #       parameters: ./parameters/prod.parameters.json #appServiceAPIEnvVarENV=${{ vars.ENV }} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }}
-  #       deploymentName: ${{ env.USER_ALIAS }}-prod
-  #       failOnStdErr: false
+    - name: deploy to prod
+      uses: azure/arm-deploy@v2
+      with:
+        subscriptionId: ${{ env.SUBSCRIPTION_ID_DEV }}
+        resourceGroupName: ${{ env.RESOURCE_GROUP_PROD }}
+        template: ./main.bicep
+        parameters: ./parameters/prod.parameters.json appServiceAPIEnvVarENV=${{ vars.ENV }} appServiceAPIEnvVarDBHOST=${{ vars.DBHOST }} appServiceAPIEnvVarDBNAME=${{ vars.DBNAME }} appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }} appServiceAPIDBHostFLASK_APP=${{ vars.FLASK_APP }} appServiceAPIDBHostFLASK_DEBUG=${{ vars.FLASK_DEBUG }} slackUrl=${{ vars.slackUrl}}
+        deploymentName: ${{ env.USER_ALIAS }}-prod
+        failOnStdErr: false
+
 
 
